Give an example to assembly:single goal in README.