@@ -48,6 +48,17 @@ or call JMH manually:
     > -wi 5 -i 10 -bm avgt -tu ms -f 5 \
     > ".*RingBenchmark.*"
 
+Instead of using JMH, you can additionally use `assembly:single` goal to
+create an all-in-one JAR and run benchmarks individually.
+
+    $ mvn assembly:single
+    $ java \
+    > -server -XX:+TieredCompilation -XX:+AggressiveOpts \
+    > -DworkerCount=503 -DringSize=10000000 \
+    > -javaagent:/path/to/quasar-core-<version>.jar \
+    > -cp target/fiber-test-<version>-jar-with-dependencies.jar \
+    > com.github.vy.fibertest.QuasarFiberRingBenchmark
+
 License
 -------
 
